5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1684_1105.log
== TEST (2019-05-01 17:53:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)
lobo = Stark
leao = Lannister
veado = Baratheon
dragao = Targaryen
rosa = Tyrell
sol = Martell
lula = Greyjoy
esfolado = Bolton
turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
		mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen""
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem)
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 23
    mensagem = "Targaryen""
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:53:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)
lobo = Stark
leao = Lannister
veado = Baratheon
dragao = Targaryen
rosa = Tyrell
sol = Martell
lula = Greyjoy
esfolado = Bolton
turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
		mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lobo = Stark
NameError: name 'Stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:54:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
		mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == "Stark"):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:55:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
		mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == "Stark"):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:56:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
	mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == "Stark"):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:58:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
	mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == "Stark"):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:58:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

#if(lobo == "Stark"):
	#mensagem = "Stark"
elif(leao == "Lannister"):
	mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Turell"):
	mensagem = "Turell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 18
    elif(leao == "Lannister"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 22:29:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == "Stark"):
	mensagem = "Stark"
elif(leao == "Lannister"):
	mensagem = "Lannister"
elif(veado == "Baratheon"):
	mensagem = "Baratheon"
elif(dragao == "Targaryen"):
	mensagem = "Targaryen"
elif(rosa == "Tyrell"):
	mensagem = "Tyrell"
elif(sol == "Mrtell"):
	mensagem = "Martell"
elif(lula == "Greyjoy"):
	mensagem = "Greyjoy"
elif(esfolado == "Bolton"):
	mensagem = "Bolton"
elif(turta == "Tully"):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == "Stark"):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 22:31:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == Stark):
	mensagem = "Stark"
elif(leao == Lannister):
	mensagem = "Lannister"
elif(veado == Baratheon)
	mensagem = "Baratheon"
elif(dragao == Targaryen):
	mensagem = "Targaryen"
elif(rosa == Tyrell):
	mensagem = "Tyrell"
elif(sol == Martell):
	mensagem = "Martell"
elif(lula == Greyjoy):
	mensagem = "Greyjoy"
elif(esfolado == Bolton):
	mensagem = "Bolton"
elif(turta == Tully):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 20
    elif(veado == Baratheon)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 22:31:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)
#lobo = Stark
#leao = Lannister
#veado = Baratheon
#dragao = Targaryen
#rosa = Tyrell
#sol = Martell
#lula = Greyjoy
#esfolado = Bolton
#turta = Tully

if(lobo == Stark):
	mensagem = "Stark"
elif(leao == Lannister):
	mensagem = "Lannister"
elif(veado == Baratheon):
	mensagem = "Baratheon"
elif(dragao == Targaryen):
	mensagem = "Targaryen"
elif(rosa == Tyrell):
	mensagem = "Tyrell"
elif(sol == Martell):
	mensagem = "Martell"
elif(lula == Greyjoy):
	mensagem = "Greyjoy"
elif(esfolado == Bolton):
	mensagem = "Bolton"
elif(turta == Tully):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if(lobo == Stark):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 22:32:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)

if(lobo == Stark):
	mensagem = "Stark"
elif(leao == Lannister):
	mensagem = "Lannister"
elif(veado == Baratheon):
	mensagem = "Baratheon"
elif(dragao == Targaryen):
	mensagem = "Targaryen"
elif(rosa == Tyrell):
	mensagem = "Tyrell"
elif(sol == Martell):
	mensagem = "Martell"
elif(lula == Greyjoy):
	mensagem = "Greyjoy"
elif(esfolado == Bolton):
	mensagem = "Bolton"
elif(turta == Tully):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(lobo == Stark):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 22:34:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao,)

if(lobo == Stark):
	mensagem = "Stark"
elif(leao == Lannister):
	mensagem = "Lannister"
elif(veado == Baratheon):
	mensagem = "Baratheon"
elif(dragao == Targaryen):
	mensagem = "Targaryen"
elif(rosa == Tyrell):
	mensagem = "Tyrell"
elif(sol == Martell):
	mensagem = "Martell"
elif(lula == Greyjoy):
	mensagem = "Greyjoy"
elif(esfolado == Bolton):
	mensagem = "Bolton"
elif(turta == Tully):
	mensagem = "Tully"
else:
	mensagem = "invalido"
									
print("Casa: " ,mensagem,)
	
	
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(lobo == Stark):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 15:42:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)

if(brasao == "lobo"):
	print("Stark")
elif(brasao == "leao"):
	print("Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Targaryen")
elif(brasao == "rosa"):
	print("Tyrell")
elif(brasao == "sol"):
	print("Martell")
elif(brasao == "lula"):
	print("Greyjoy")
elif(brasao == "esfolado"):
	print("Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")	
	
	
	
	
	
	
	
-- OUTPUT:
Entrada:  lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 15:42:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Lannister")
elif(brasao == "veado"):
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")	
	
	
	
	
	
	
	
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-18 15:43:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada: ",brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Lannister")
elif(brasao == "veado"):
	print("Casa: Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.184026
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
